src/NKnife.TDMS/Externals/nilibddc.h

   typedef DDCChannelGroup*         DDCChannelGroupHandle;
   typedef enum {
      DDC_UInt8 = 5,   // unsigned char
      DDC_Int16 = 2,   // short
      DDC_Int32 = 3,   // int
      DDC_Float = 9,   // float
      DDC_Double = 10,   // double
      DDC_String = 23,   // string
      DDC_Timestamp = 30,   // timestamp (Year/Month/Day/Hour/Minute/Second/Millisecond components)
   } DDCDataType;
   //*****************************************************************************
   /// <- File
   //*****************************************************************************

   //*****************************************************************************
   /// -> Channel Group
   //*****************************************************************************
   int __cdecl DDC_SetChannelGroupProperty(DDCChannelGroupHandle channelGroup,
      const char *property,
      ...);
   int __stdcall DDC_SetChannelGroupPropertyTimestampComponents(DDCChannelGroupHandle channelGroup,
      const char *property,
      unsigned int year,
      unsigned int month,
      unsigned int day,
      unsigned int hour,
      unsigned int minute,
      unsigned int second,
      double milliSecond);
   int __stdcall DDC_SetChannelGroupPropertyV(DDCChannelGroupHandle channelGroup,
      const char *property,
      va_list args);
   int __stdcall DDC_GetChannelGroupProperty(DDCChannelGroupHandle channelGroup,
      const char *property,
      void *value,
      size_t valueSizeInBytes);
   int __stdcall DDC_GetChannelGroupPropertyTimestampComponents(DDCChannelGroupHandle channelGroup,
      const char *property,
      unsigned int *year,
      unsigned int *month,
      unsigned int *day,
      unsigned int *hour,
      unsigned int *minute,
      unsigned int *second,
      double *milliSecond,
      unsigned int *weekDay);
   int __stdcall DDC_GetChannelGroupStringPropertyLength(DDCChannelGroupHandle channelGroup,
      const char *property,
      unsigned int *length);
   int __cdecl DDC_CreateChannelGroupProperty(DDCChannelGroupHandle channelGroup,
      const char *property,
      DDCDataType dataType,
      ...);
   int __stdcall DDC_CreateChannelGroupPropertyTimestampComponents(DDCChannelGroupHandle channelGroup,
      const char *property,
      unsigned int year,
      unsigned int month,
      unsigned int day,
      unsigned int hour,
      unsigned int minute,
      unsigned int second,
      double milliSecond);
   int __stdcall DDC_CreateChannelGroupPropertyV(DDCChannelGroupHandle channelGroup,
      const char *property,
      DDCDataType dataType,
      va_list args);
   int __stdcall DDC_ChannelGroupPropertyExists(DDCChannelGroupHandle channelGroup,
      const char *property,
      int *exists);
   int __stdcall DDC_GetNumChannelGroupProperties(DDCChannelGroupHandle channelGroup,
      unsigned int *numProperties);
   int __stdcall DDC_GetChannelGroupPropertyNames(DDCChannelGroupHandle channelGroup,
      char** propertyNames,
      size_t numPropertyNames);
   int __stdcall DDC_GetChannelGroupPropertyType(DDCChannelGroupHandle channelGroup,
      const char *property,
      DDCDataType *dataType);